2013-07-19  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* ld-scripts/script.exp: Run align with input test.
	* ld-scripts/align-with-input.t: New file.
	* ld-scripts/rgn-at8.d: Likewise.
	* ld-scripts/rgn-at8.t: Likewise.

2013-07-18  Terry Guo  <terry.guo@arm.com>

        * ld-arm/thumb-b-lks-sym.d: Updated to be more flexible.
        * ld-arm/thumb-bl-lks-sym.d: Likewise.

2013-07-18  Roland McGrath  <mcgrathr@google.com>

	* ld-arm/farcall-arm-nacl.d: New file.
	* ld-arm/farcall-arm-nacl-pic.d: New file.
	* ld-arm/farcall-data-nacl.d: New file.
	* ld-arm/arm-elf.exp (armeabitests_common): Add extra element to
	"action" lists for those cases to use a different dump file for NaCl
	targets.
	Massage $armeabitests_common to drop the extra element or the one
	before it, depending on [istarget "arm*-*-nacl*"].

	* ld-arm/arm-elf.exp (armelftests_common): Move all "Cortex-A8
	erratum fix", Thumb-only and interworking cases to ...
	(armelftests_nonacl): ... here.
	(armeabitests_common): Move all "erratum 760522 fix", Thumb-only
	and interworking cases to ...
	(armeabitests_nonacl): ... here.

2013-07-12  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-mips-elf/nan-2008.d: New test.
	* ld-mips-elf/nan-legacy.d: New test.
	* ld-mips-elf/nan-mixed-1.d: New test.
	* ld-mips-elf/nan-mixed-2.d: New test.
	* ld-mips-elf/nan-2008.s: New test source.
	* ld-mips-elf/nan-legacy.s: New test source.

2013-07-03  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* ld-aarch64/emit-relocs-309.s: Replace got_prel19 with got.
	* ld-aarch64/gc-relocs-309.s: Likewise.

2013-07-02  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* ld-aarch64/gc-plt-relocs.d: Adjust expected .got offsets.
	* ld-aarch64/tls-desc-ie.d: Likewise.
	* ld-aarch64/emit-relocs-311.d: Adjust expected	symbol.
	* ld-aarch64/tls-relax-all.d: Likewise.
	* ld-aarch64/tls-relax-gd-ie.d: Likewise.
	* ld-aarch64/tls-relax-gdesc-ie.d: Likewise.
	* ld-aarch64/tls-relax-gdesc-ie-2.d: Likewise.
