@@ -129,18 +129,7 @@ if ![ld_simple_link $ld tmpdir/script "$flags -T $srcdir/$subdir/memory.t tmpdir
 set test_script_list [lsort [glob $srcdir/$subdir/region-alias-*.t]]
 
 foreach test_script $test_script_list {
-    set testname [file tail $test_script]
-    if ![ld_simple_link $ld tmpdir/script "$flags -T $test_script tmpdir/script.o"] {
-        xfail "REGION_ALIAS: $testname"
-    } else {
-        xpass "REGION_ALIAS: $testname"
-    }
+    run_dump_test [string range $test_script 0 end-2]
 }
 
-set testname "ALIGN_WITH_INPUT"
-
-if ![ld_simple_link $ld tmpdir/script "$flags -T $srcdir/$subdir/align-with-input.t tmpdir/script.o"] {
-    xfail $testname
-} else {
-    xpass $testname
-}
+run_dump_test "align-with-input"
